--- a/photo-backbone/styles/main.css
+++ b/photo-backbone/styles/main.css
@@ -1,3 +1,18 @@
 body {
   background-color: #c9f1fe;
 }
+
+.image-list  {
+  text-align: left;
+  background-color: white;
+  border-collapse:collapse;
+}
+
+.image-list thead {
+  background-color: gray;
+}
+
+.image-viewer .image {
+  width: 500px;
+  height: 400px;
+}
