Add PhotoViewer Component, pass down click handler from App to PhotoTableRow

--- a/photo-react/styles/main.css
+++ b/photo-react/styles/main.css
@@ -2,17 +2,17 @@ body {
   background-color: #c9f1fe;
 }
 
-.image-list  {
+.photo-list  {
   text-align: left;
   background-color: white;
   border-collapse:collapse;
 }
 
-.image-list thead {
+.photo-list thead {
   background-color: gray;
 }
 
-.image-viewer .image {
+.photo-viewer .photo {
   width: 500px;
   height: 400px;
 }
